--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -136,6 +136,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
     height: 370px;
     overflow-y: scroll;
+    position: relative;
     }
     
     /* style the scrollbar */
@@ -193,6 +194,40 @@
     /* Logo */
     .logo{
     height: 120px;
+    }
+
+    .questioning-bar-container{
+        background-color: #1a1b2659;
+        height: 20px;
+        width: 100%;
+        border: 1px solid #282a36;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+    
+    .questioning-bar-text-input {
+        background-color: inherit;
+        border: none;
+        width:100%;
+        color:yellow
+    }
+
+    .questioning-bar-submit-button {
+        background-color: #282a3665;
+        color: yellow;
+    }
+
+    .chatbox-container{
+        height: inherit;
+        width:100%;
+        background-color: #282a36;
+        position: absolute;
+        bottom:0;
+        right:0;
     }
     
     /* Responsive styles */
