--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -90,6 +90,7 @@
     max-width: 100%;
     width:100%;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    margin-bottom: 50px;
     }
     
     @media (min-width: 600px) {
