made it working, but needs improvement of ui

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -205,7 +205,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        position: absolute;
+        position: sticky;
         bottom: 0;
         right: 0;
     }
